<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/seashell"
    tools:context=".MainActivity" >
	
    <!-- line1 -->

    <EditText
        android:id="@+id/et_input"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/white_bg"
        android:gravity="right|bottom"
        android:paddingRight="12dp"
        android:paddingBottom="10dp"
        android:cursorVisible="false"
        android:text="@string/btn_zero"
        android:inputType="none" />
    
    <!-- line2 -->

    <LinearLayout
        style="@style/ButtonLine" >
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_clear"
	        android:textSize="20sp"
	        android:id="@+id/btn_clear" />
	        
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_del"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_del" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_divide"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_divide" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_multiply"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_multiply" />
	</LinearLayout>
	
    <!-- line3 -->

    <LinearLayout
        style="@style/ButtonLine" >
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_seven"
	        android:textSize="20sp"
	        android:id="@+id/btn_seven" />
	        
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_eight"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_eight" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_nine"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_nine" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_substract"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_substract" />
	</LinearLayout>
	
    <!-- line4 -->

    <LinearLayout
        style="@style/ButtonLine" >
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_four"
	        android:textSize="20sp"
	        android:id="@+id/btn_four" />
	        
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_five"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_five" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_six"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_six" />
	    
	    <Button 
	        style="@style/Button1"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:text="@string/btn_add"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_add" />
	</LinearLayout>
	
    
	
    <!-- line5 -->

    <LinearLayout
        style="@style/ButtonLine" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
			    
			    <Button 
			        style="@style/Button1"
			        android:layout_width="60dp"
			        android:layout_height="60dp"
			        android:text="@string/btn_one"
			        android:textSize="20sp"
			        android:id="@+id/btn_one" />
			        
			    <Button 
			        style="@style/Button1"
			        android:layout_width="60dp"
			        android:layout_height="60dp"
			        android:text="@string/btn_two"
			        android:layout_marginLeft="10dp"
			        android:textSize="20sp"
			        android:id="@+id/btn_two" />
			    
			    <Button 
			        style="@style/Button1"
			        android:layout_width="60dp"
			        android:layout_height="60dp"
			        android:text="@string/btn_three"
			        android:layout_marginLeft="10dp"
			        android:textSize="20sp"
			        android:id="@+id/btn_three" />
			</LinearLayout>
		
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp" >
	
			    <Button 
			        style="@style/Button1"
			        android:layout_width="130dp"
			        android:layout_height="60dp"
			        android:text="@string/btn_zero"
			        android:textSize="20sp"
			        android:id="@+id/btn_zero" />
			        
			    <Button 
			        style="@style/Button1"
			        android:layout_width="60dp"
			        android:layout_height="60dp"
			        android:text="@string/btn_point"
			        android:layout_marginLeft="10dp"
			        android:textSize="20sp"
			        android:id="@+id/btn_point" />
		    </LinearLayout>
		</LinearLayout>
		<Button 
		    style="@style/Button2"
	        android:layout_width="60dp"
	        android:layout_height="130dp"
	        android:text="@string/btn_equal"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"
	        android:id="@+id/btn_equal" />
	</LinearLayout>
</LinearLayout>